fix(ui): Header - correct alignment

--- a/packages/html-templates/src/app/styles.css
+++ b/packages/html-templates/src/app/styles.css
@@ -14,7 +14,6 @@
   top: 0;
   right: 0;
   height: var(--header-height);
-  padding-bottom: 0;
 }
 
 .main {
