--- a/packages/ui/src/ui/logo/logo.module.css
+++ b/packages/ui/src/ui/logo/logo.module.css
@@ -1,5 +1,5 @@
 .root {
-  display: inline-block;
+  display: block;
   width: var(--space-large);
 }
 
